--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bozi Romas Saiti</title>
+  <link rel="icon" type="image/jpeg" href="favicon.jpg">
   <style>
     html, body {
       margin: 0;
