--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <img src="boziguri.jpeg" alt="Fullscreen Image">
+  <img src="boziroma.jpeg" alt="Fullscreen Image">
 </body>
 </html>
