--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
       padding: 0;
       height: 100%;
       background: #000;
+      overflow: hidden;
     }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+    video {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
       display: block;
     }
   </style>
 </head>
 <body>
-  <img src="boziroma.jpeg" alt="Fullscreen Image">
+  <video autoplay muted loop playsinline>
+    <source src="boziroma.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 </body>
 </html>
