--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     video {
       width: 100vw;
       height: 100vh;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
     }
   </style>
