--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bozi Romas Saiti</title>
+  <!-- Primary Meta Tags -->
+  <title>ბოზი რომას საიტი</title>
+  <meta name="title" content="ბოზი რომას საიტი">
+  <meta name="description" content="აქ ნახავთ ინფორმაციას ბოზი რომას შესახებ">
+  <meta name="keywords" content="ბოზი,რომა,საიტი,ინფორმაცია">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://boziromas.site/">
+  <meta property="og:title" content="ბოზი რომას საიტი">
+  <meta property="og:description" content="აქ ნახავთ ინფორმაციას ბოზი რომას შესახებ">
+  <meta property="og:image" content="http://boziromas.site/boziroma.jpeg">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="http://boziromas.site/">
+  <meta property="twitter:title" content="ბოზი რომას საიტი">
+  <meta property="twitter:description" content="აქ ნახავთ ინფორმაციას ბოზი რომას შესახებ">
+  <meta property="twitter:image" content="http://boziromas.site/boziroma.jpeg">
   <link rel="icon" type="image/jpeg" href="favicon.jpg">
   <style>
     html, body {
